# poker

./: LICENSE  README.md  poker.cabal  stack.yaml
lib/: Poker.hs
test/: Main.hs
