name:                poker
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/poker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall -Werror
  exposed-modules:     Poker
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -Wall -Werror
  main-is:        Main.hs
  build-depends:  poker
                , base
                , containers
                , bytestring
                , lens
                , hspec
                , hspec-expectations-lens
